--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
       - ./templates:/app/templates  # 映射本地的 templates 目录到容器中
       - ./results:/app/results  # 映射本地的 results 目录到容器中
     environment:
+      - TZ=Asia/Shanghai
       - OPENAI_API_KEY=${OPENAI_API_KEY}  # 使用环境变量 OPENAI_API_KEY
       - OPENAI_BASE_URL=${OPENAI_BASE_URL}  # 使用环境变量 OPENAI_BASE_URL
       - OPENAI_API_BASE=${OPENAI_API_BASE}  # 使用环境变量 OPENAI_API_BASE
-      - CLOUD_ML_REGION=${CLOUD_ML_REGION=} # for Model Garden call
+      - CLOUD_ML_REGION=${CLOUD_ML_REGION} # for Model Garden call
       - ANTHROPIC_VERTEX_PROJECT_ID=${ANTHROPIC_VERTEX_PROJECT_ID} # for Model Garden call
       - VERTEXAI_LOCATION=${VERTEXAI_LOCATION} # for Aider/LiteLLM call, as per https://docs.litellm.ai/docs/providers/vertex#set-vertex-project--vertex-location
       - VERTEXAI_PROJECT=${VERTEXAI_PROJECT} # for Aider/LiteLLM call as per https://docs.litellm.ai/docs/providers/vertex#set-vertex-project--vertex-location
